[package]
name = "steam"
version = "0.1.0"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "steam"
path = "src/lib.rs"

[dependencies]
clap = "*"
dirs = "*"
glob = "*"
image = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "1.0.31"
